--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -18,6 +18,10 @@
     font-family: 'Proximanova';
   }
 
+  a, a:hover, a:active, a:visited, a:focus {
+      text-decoration:none;
+  }
+
   .form-container {
     position: absolute;
     margin: 0 auto;
