some protection from covering

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -832,6 +832,16 @@ a.demo-button button#new-hero-button {
 
 }
 
+/*don't overlap text*/
+
+@media (min-width: 768px) and (max-width: 890px) {
+
+  .device-image {
+    margin-top: 40px;
+  }
+
+}
+
 
 
 
