--- a/app/views/homepage/components/_footer.erb
+++ b/app/views/homepage/components/_footer.erb
@@ -3,7 +3,7 @@
         <nav class="footer--nav">
           <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
             Terms &amp; Privacy </a>
-          <a class="footer--nav--link" href="/student_dashboard/#/story/demo">
+          <a class="footer--nav--link" href="/reports/step-demo">
             Try Demo
           </a>
           <a class="footer--nav--link" href="mailto:team@readupnow.com">
