--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -3,10 +3,10 @@
   <head>
 
   <!-- Maybe be repeating this code from _headers.erb  -->
-<title>ReadUp | The easiest way to assess reading</title>
-<meta name="description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
-<meta property="og:title" content="ReadUp | The easiest way to assess reading">
-<meta property="og:description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
+<title>ReadUp | F&amp;P and STEP reading assessment online</title>
+<meta name="description" content="ReadUp's trusted reading specialists give and score a full Fountas and Pinnell or STEP assessment so teachers can focus less on testing and more on teaching.">
+<meta property="og:title" content="ReadUp | F&P and STEP reading assessment online">
+<meta property="og:description" content="ReadUp's trusted reading specialists give and score a full Fountas and Pinnell or STEP assessment so teachers can focus less on testing and more on teaching.">
 
   <!-- END Maybe be repeating this code from _headers.erb  -->
 
