--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -37,6 +37,14 @@
 
   img#districts {
     width: 58%;
+    /*Make it undraggable*/
+    user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
   }
 
   .mainTitle {
@@ -707,6 +715,13 @@
   width: 300px;
   z-index: 1;
 
+  /*Make it undraggable*/
+  user-drag: none; 
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .animation-video {
