--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -888,7 +888,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's trusted <span class="specialists"><a href='/reports/direct-sample?brand=<%= @brand[:code]%>'>reading specialists</a></span> give and score a full F&amp;P or STEP assessment so teachers can focus less on testing and <span> more on teaching.</span>
+            ReadUp's trusted <span class="specialists"><a href='/reports/direct-sample?brand=<%= @brand[:code]%>'>reading specialists</a></span> give and score a full F&amp;P or STEP assessment so teachers can spend less time testing and <span> more time teaching.</span>
            </h4>
       <a class="demo-button" href="/reports/direct-sample?brand=<%= @brand[:code]%> ">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
