--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -40,12 +40,27 @@
 
 @font-face {
     font-family: 'Proximanova';
+    src: font-url('Proxima-Nova-Semibold.eot');
+    src: local('☺'), font-url('Proxima-Nova-Semibold.woff') format('woff'), font-url('Proxima-Nova-Semibold.ttf') format('truetype'), font-url('Proxima-Nova-Semibold.svg') format('svg');
+    font-weight: 300;
+}
+
+
+@font-face {
+    font-family: 'Proximanova';
     src: font-url('Proxima-Nova-Regular-Italic.eot');
     src: local('☺'), font-url('Proxima-Nova-Regular-Italic.woff') format('woff'), font-url('Proxima-Nova-Regular-Italic.ttf') format('truetype'), font-url('Proxima-Nova-Regular-Italic.svg') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
+@font-face {
+    font-family: 'Comic Neue Angular';
+    src: font-url('ComicNeue-Angular-Bold.eot');
+    src: local('☺'), font-url('ComicNeue-Angular-Bold.woff') format('woff'), font-url('ComicNeue-Angular-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
 
 
 
