set sans-serif fallback font

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -15,7 +15,7 @@
 <style type="text/css">
 
   body { 
-    font-family: 'Proximanova';
+    font-family: 'Proximanova', sans-serif;
   }
 
   a, a:hover, a:active, a:visited, a:focus {
