remove button jump on wiggler

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -43,12 +43,6 @@
   }
 
 
-  .wiggler:hover {
-    transform: translateY(0px);
-    transition: all .3s;
-
-  }
-
 
 
 
@@ -227,6 +221,13 @@
 
   button { 
     transition: all .3s;
+  }
+
+
+  .wiggler:hover {
+    transform: translateY(0px) !important; 
+    transition: all .3s;
+
   }
 
 
