a basic spelling Metric UI

--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -191,6 +191,8 @@ button, .playbookTrigger {
 	justify-content: center;
 	margin-top: 5px; 
 	/*This aligns it with bottom of Student Heading.*/
+	padding-left: 30px;
+
 }
 
 .metricWrapper {
@@ -199,8 +201,8 @@ button, .playbookTrigger {
 	align-items: center;
 	justify-content: center;
 	padding: 6px;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .metricFigureLabel {
