--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -495,6 +495,12 @@ button, .playbookTrigger {
 	margin-bottom: 5em;
 }
 
+.metricsDivider {
+	margin-bottom: 4em;
+    margin-top: 4em;
+    opacity: .66;
+}
+
 .compPart {
 	margin-bottom: 5em;
 }
