--- a/client/src/sharedComponents/styles.css
+++ b/client/src/sharedComponents/styles.css
@@ -196,6 +196,22 @@
 }
 
 
+.titleWrapper {
+	display: flex;
+	justify-content: space-between;
+	flex-flow: row;
+
+}
+
+.columnTitle {
+	display: inline-block;
+	max-width: 150px;
+    text-align: center;
+    font-family: 'proximanova semibold';
+
+}
+
+
 @media (max-width: 1024px) {
 	.rightSide {
 		display: none;
