spelling report is beginning to shape up

--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -373,6 +373,11 @@ button, .playbookTrigger {
 	margin-bottom: 60px;
 }
 
+.sectionLargeTitle {
+	margin-top: 25px;
+    margin-bottom: 30px;
+}
+
 .bookInfoWrapper {
 
 }
