first sign of progress for phonetics

--- a/client/src/sharedComponents/styles.css
+++ b/client/src/sharedComponents/styles.css
@@ -228,6 +228,13 @@
     text-align: center;
 }
 
+.listElt {
+	margin-bottom: 10px;
+}
+
+.emptyPhonetics {
+	color: #bbb;
+}
 
 @media (max-width: 1024px) {
 	.rightSide {
