the ui is pretty much ready to make complete

--- a/client/src/sharedComponents/styles.css
+++ b/client/src/sharedComponents/styles.css
@@ -228,6 +228,12 @@
     text-align: center;
 }
 
+.numberedList {
+    list-style-type: decimal;
+    padding-left: 13px;
+    color: #525252;
+}
+
 .listElt {
 	margin-bottom: 10px;
 }
