functionality of skip is working for oral reading

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -145,3 +145,13 @@
     font-size: 16px;
 }
 
+.skipPrompt {
+	font-size: 16px;
+	font-style: italic;
+	color: white;
+	position: relative;
+	top: -40vh;
+	cursor: pointer; 
+
+}
+
