add rescore option to RR, though it iis fake

--- a/client/src/sharedComponents/styles.css
+++ b/client/src/sharedComponents/styles.css
@@ -281,7 +281,18 @@
 }
 
 
+.RRrescore {
+    font-style: italic;
+    font-size: .8em;
+    cursor: pointer;
+    color: #347BB8;
+    transition: all .3s;
 
+    display: inline-block;
+    width: 125px;
+    margin-left: 20px;
+
+}
 
 
 @media (max-width: 1024px) {
