add hear again to spelling

--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -47,5 +47,8 @@ i.helper {
     display: inline-block;
     position: relative;
     margin-left: 10px;
+}
 
+.clickable {
+    cursor: pointer;
 }
