--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -1,53 +1,65 @@
 body {
-	font-family: 'ProximaNova', sans-serif;
+	font-family: "ProximaNova", sans-serif;
 }
 
 @keyframes pulseOut {
 	0% {
-		transform: scale(1.0)
+		transform: scale(1);
 	}
 	40% {
-		transform: scale(1.5)
+		transform: scale(1.5);
 	}
 	50% {
-		transform: scale(1.5)
+		transform: scale(1.5);
 	}
 	90% {
-		transform: scale(1.0)
+		transform: scale(1);
 	}
 	100% {
-		transform: scale(1.0)
-	}	
+		transform: scale(1);
+	}
 }
 /**/
 
-@keyframes wiggle{
-	42%{transform:rotate(0deg)}
-	46%{transform:rotate(5deg)}
-	50%{transform:rotate(-5deg)}
-	54%{transform:rotate(5deg)}
-	58%{transform:rotate(-5deg)}
-	62%{transform:rotate(5deg)}
-	66%{transform:rotate(-5deg)}
-	70%{transform:rotate(0deg)}
+@keyframes wiggle {
+	42% {
+		transform: rotate(0deg);
+	}
+	46% {
+		transform: rotate(5deg);
+	}
+	50% {
+		transform: rotate(-5deg);
+	}
+	54% {
+		transform: rotate(5deg);
+	}
+	58% {
+		transform: rotate(-5deg);
+	}
+	62% {
+		transform: rotate(5deg);
+	}
+	66% {
+		transform: rotate(-5deg);
+	}
+	70% {
+		transform: rotate(0deg);
+	}
 }
 
 .wiggler {
-
-/*    -webkit-animation: wiggle 5s infinite;*/
-    animation: wiggle 5s infinite;
-
+	/*    -webkit-animation: wiggle 5s infinite;*/
+	animation: wiggle 5s infinite;
 }
 
 .pulse {
 	animation: pulseOut 2s infinite;
 }
 
-
-.submitButton:hover .pulse{
+.submitButton:hover .pulse {
 	animation: none;
 }
-
 
 .reportsContainer {
 	color: #4a4a4a;
@@ -55,15 +67,15 @@ body {
 
 .switchSTEPheading {
 	position: relative;
-    top: 80px;
-    text-align: center;
-    font-size: 14px;
-    color: #31708E;
-    cursor: pointer;
-    transition: all .3s;
-    width: 190px;
-    margin: 10px auto;
-    font-family: 'ProximaNova semibold';
+	top: 93px;
+	text-align: center;
+	font-size: 14px;
+	color: #31708e;
+	cursor: pointer;
+	transition: all 0.3s;
+	width: 190px;
+	margin: 0px auto;
+	font-family: "ProximaNova semibold";
 }
 
 .navBar {
@@ -80,17 +92,14 @@ body {
 	border-radius: 3px;
 }
 
-
 .contentWrapper {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	padding: 70px 110px;
 	padding-right: 50px;
 	padding-top: 130px;
 	max-width: 1025px;
 	background-color: white;
-
 }
-
 
 .evaluationInfoHeader {
 	display: flex;
@@ -102,36 +111,34 @@ body {
 }
 
 .studentNameHeading {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-weight: bold;
 	font-size: 2.5em;
-	
 }
 
-.bookInfoSubheading p{
+.bookInfoSubheading p {
 	font-size: 1.4em;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-style: italic;
 	margin-top: 15px;
 	color: #4a4a4a;
 }
 
 .bookInfoSubheading span {
-	font-family: 'Conv_proxima-nova-bold-italic';
+	font-family: "Conv_proxima-nova-bold-italic";
 	color: #4a4a4a;
 }
 
-
 .icon {
 	display: inline-block;
-    height: 20px;
-    margin-left: 7px;
-    max-width: none !important
+	height: 20px;
+	margin-left: 7px;
+	max-width: none !important;
 }
 
 .playbookTrigger {
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 	color: #2e6da4;
 	cursor: pointer;
 	width: 9.5em;
@@ -142,27 +149,25 @@ body {
 	width: 9.05em;
 }
 
-
-.playbookTrigger:hover, .switchSTEPheading:hover {
+.playbookTrigger:hover,
+.switchSTEPheading:hover {
 	transform: translateY(-3px);
-    filter: brightness(120%);
-    transition: all .3s;
-
+	filter: brightness(120%);
+	transition: all 0.3s;
 }
 
-
-.rescore:hover  {
-    filter: brightness(120%);
-    transition: all .3s;
+.rescore:hover {
+	filter: brightness(120%);
+	transition: all 0.3s;
 }
 
 .alertSuccess {
 	position: fixed;
-    top: 59px;
-    right: 0px;
-    width: 77%;
-    text-align: center;
-    z-index: 99;
+	top: 59px;
+	right: 0px;
+	width: 77%;
+	text-align: center;
+	z-index: 99;
 }
 
 .miniAlert {
@@ -172,55 +177,50 @@ body {
 	left: -12px;
 }
 
-
 .summaryDivider {
 	margin-top: 4em;
-    opacity: .6;
+	opacity: 0.6;
 }
 
-
-button:hover, .btn-primary:hover {
+button:hover,
+.btn-primary:hover {
 	transform: translateY(-3px);
-    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
-    filter: brightness(110%);
-    transition: all .3s;
+	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+	filter: brightness(110%);
+	transition: all 0.3s;
 }
-
 
 .pricingFormButton:hover {
-    transform: translateY(-3px);
-	box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+	transform: translateY(-3px);
+	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
 	filter: brightness(110%);
-	transition: all .3s;
+	transition: all 0.3s;
 }
 
-.audioWrapper button:hover, button.miniPlayButton:hover {
+.audioWrapper button:hover,
+button.miniPlayButton:hover {
 	transform: translateY(0px);
-    background-color: #337ab7;
-    border-color: #2e6da4;
+	background-color: #337ab7;
+	border-color: #2e6da4;
 }
 
-
-
-button, .playbookTrigger {
-		transition: all .3s;
-
+button,
+.playbookTrigger {
+	transition: all 0.3s;
 }
 
 .stepLevel {
 	font-weight: 100 !important;
 }
 
-
 .metricsHeadingContainer {
 	flex: 1;
 	display: flex;
 	flex-flow: row;
 	justify-content: center;
-	margin-top: 5px; 
+	margin-top: 55px;
 	/*This aligns it with bottom of Student Heading.*/
 	padding-left: 30px;
-
 }
 
 .metricWrapper {
@@ -234,20 +234,20 @@ button, .playbookTrigger {
 }
 
 .metricFigureLabel {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-size: 1.9em;
 }
 
 .goodMetric {
-	color: #249C44;
+	color: #249c44;
 }
 
 .fairMetric {
-	color: #D97F0F;
+	color: #d97f0f;
 }
 
-.poorMetric { 
+.poorMetric {
 	color: #982e2b;
 }
 
@@ -255,14 +255,13 @@ button, .playbookTrigger {
 	color: #bbb;
 }
 
-
 .detail {
 	font-weight: 100;
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 	font-size: 12px;
-    color: grey;
-    display: block;	
-    line-height: 1.7;
+	color: grey;
+	display: block;
+	line-height: 1.7;
 }
 
 .detail span {
@@ -270,33 +269,27 @@ button, .playbookTrigger {
 }
 
 .myHr {
-	margin: .5em 0;
-    margin-bottom: 6px;
+	margin: 0.5em 0;
+	margin-bottom: 6px;
 }
 
-
-
 .metricDescriptionLabel {
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 	font-size: 1.3em;
-	transition: all .3s;
-
+	transition: all 0.3s;
 }
 
 .metricLabelWithDetails {
-	transition: all .3s;
-	width: 92px;  /*so the metric caret doesn't break to new line*/
-    text-align: center;
+	transition: all 0.3s;
+	width: 92px; /*so the metric caret doesn't break to new line*/
+	text-align: center;
 }
-
 
 .metricLabelWithDetails:hover {
 	transform: translateY(-2px);
-    filter: brightness(135%);
-    transition: all .3s;
+	filter: brightness(135%);
+	transition: all 0.3s;
 }
-
-
 
 .levelInfoWrapper {
 	display: flex;
@@ -308,16 +301,15 @@ button, .playbookTrigger {
 }
 
 .levelRectangle {
-	background-color: #249C44;
+	background-color: #249c44;
 	color: white;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-size: 1.4em;
 	width: 140px;
 	padding: 5px;
 	text-align: center;
 	border-radius: 5px;
 }
-
 
 .panel-custom {
 	margin-top: 20px;
@@ -335,56 +327,46 @@ button, .playbookTrigger {
 	padding: 15px 35px 15px 20px;
 }
 
-
-
 .goodLevelResult {
-	background-color: #249C44;
+	background-color: #249c44;
 }
-
-
 
 .poorLevelResult {
 	background-color: #982e2b;
 }
 
 .fairLevelResult {
-	background-color: #D97F0F;
+	background-color: #d97f0f;
 }
-
-
-
-
-
 
 .levelLabel {
 	margin-top: 10px;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-size: 1.2em;
 }
 
-.ReassessLevelLabel span, .ReassessLevelLabel {
+.ReassessLevelLabel span,
+.ReassessLevelLabel {
 	margin-top: 8px;
 	font-size: 1.2em;
 	text-align: center;
-
 }
 
 .ReassessLevelLabel span {
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 	font-size: 1.12em;
-
 }
 
 .ReassessLevelLabel {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 }
 
 .sectionHeader {
-    letter-spacing: .12em;
-    color: grey;
-    font-size: 12px;
-    margin-top: 80px;
-    font-weight: bold;
+	letter-spacing: 0.12em;
+	color: grey;
+	font-size: 12px;
+	margin-top: 80px;
+	font-weight: bold;
 }
 
 .bookInfoHeader {
@@ -397,41 +379,39 @@ button, .playbookTrigger {
 
 .sectionLargeTitle {
 	margin-top: 25px;
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .bookInfoWrapper {
-
 }
 
 .bookInfoTitle {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-weight: bold;
 	font-size: 1.6em;
 	min-width: 157px;
 	display: inline-block;
-
 }
 
 .optional {
 	margin-left: 10px;
-    font-size: 19px;
-    color: grey;
-    font-style: italic;
+	font-size: 19px;
+	color: grey;
+	font-style: italic;
 }
 
 .optionalSmall {
 	font-size: 12px;
-    color: grey;
-    height: 0px;
-    left: -4px;
-    opacity: 0.7;
+	color: grey;
+	height: 0px;
+	left: -4px;
+	opacity: 0.7;
 }
 
 .bookInfoLevel {
 	font-size: 1.2em;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-style: italic;
 	margin-top: 5px;
 }
@@ -441,11 +421,11 @@ button, .playbookTrigger {
 }
 
 .audioWrapper button {
-/*	background-color: #2e6da4;
+	/*	background-color: #2e6da4;
 	border-color: #275985;
-*/	font-family: 'ProximaNova Semibold';
+*/
+	font-family: "ProximaNova Semibold";
 	padding: 8px 20px;
-
 }
 
 .audioElement {
@@ -458,42 +438,39 @@ button, .playbookTrigger {
 
 .modalSubtitle {
 	color: grey;
-    font-size: 13px;
-    font-weight: 200;
-    text-align: center;
-    margin-top: 1.5em;
-    font-family: 'ProximaNova';
+	font-size: 13px;
+	font-weight: 200;
+	text-align: center;
+	margin-top: 1.5em;
+	font-family: "ProximaNova";
 }
 
 .modalSubtitleLong {
-    margin: 0 auto;
-    line-height: 1.5;
-    margin-top: 20px;
+	margin: 0 auto;
+	line-height: 1.5;
+	margin-top: 20px;
 }
-
 
 .paperImage {
 	width: 70px;
-    margin-bottom: 10px;
-    background-color: transparent;
-    display: block;
-    margin: 0px auto;
-    margin-bottom: 20px;
-    margin-top: 10px;
-
+	margin-bottom: 10px;
+	background-color: transparent;
+	display: block;
+	margin: 0px auto;
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
 .paperImageOverlay {
 	width: 30px;
-    background-color: transparent;
-    position: absolute;
-    top: 40px;
-    right: 222px;  
-    display: none;  
+	background-color: transparent;
+	position: absolute;
+	top: 40px;
+	right: 222px;
+	display: none;
 }
 
 @media (min-width: 768px) {
-	
 	.modalLg {
 		width: 690px;
 	}
@@ -517,17 +494,12 @@ button, .playbookTrigger {
 	.modalSmall {
 		width: 340px;
 	}
-
-
 }
-
 
 .mbi {
 	background-color: black;
 	opacity: 0.9;
 }
-
-
 
 /*COMPREHENSION SECTION*/
 
@@ -537,7 +509,7 @@ button, .playbookTrigger {
 }
 
 .fadedComp {
-	opacity: .4;
+	opacity: 0.4;
 }
 
 .showQ {
@@ -550,15 +522,15 @@ button, .playbookTrigger {
 
 .metricsDivider {
 	margin-bottom: 4em;
-    margin-top: 4em;
-    opacity: .66;
+	margin-top: 4em;
+	opacity: 0.66;
 }
 
 .compPart {
 	margin-bottom: 5em;
 }
 
-.compPartHeader { 
+.compPartHeader {
 	font-size: 1.5em;
 	margin-bottom: 20px;
 	font-weight: 900;
@@ -575,34 +547,33 @@ button, .playbookTrigger {
 }
 
 .questionText {
-	font-family: 'ProximaNova Semibold';
-    line-height: 1.6;
-    font-size: 16px;
-    width: 600px;
-
+	font-family: "ProximaNova Semibold";
+	line-height: 1.6;
+	font-size: 16px;
+	width: 600px;
 }
 
 .questionText span {
 	font-weight: 100;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 }
 
 .studentResponse {
-    margin: 12px 0px;
-    font-style: italic;
-    font-size: 1.075em;
-    line-height: 1.6;
-    margin-left: 20px;
-    width: 580px;
-    display: inline-block;
- }
+	margin: 12px 0px;
+	font-style: italic;
+	font-size: 1.075em;
+	line-height: 1.6;
+	margin-left: 20px;
+	width: 580px;
+	display: inline-block;
+}
 
 .compMissed {
 	color: #982e2b;
 }
 
 .compCorrect {
-	color: green; 
+	color: green;
 	/*Less contrast with white background than #249C44*/
 }
 
@@ -610,45 +581,43 @@ button, .playbookTrigger {
 	color: #af6304;
 }
 
-.compCorrect, .compMissed, .compFair {
+.compCorrect,
+.compMissed,
+.compFair {
 	margin-left: 20px;
 	width: 580px;
 }
 
-span.missed, span.correct {
-	font-weight: 900; 
+span.missed,
+span.correct {
+	font-weight: 900;
 	line-height: 1.6;
 	font-size: 1.05em;
 }
 
 .pointValue {
-    font-weight: 100;
-    font-family: 'ProximaNova';
-    font-size: 14px;
-    letter-spacing: .7px;
-    opacity: .7;
+	font-weight: 100;
+	font-family: "ProximaNova";
+	font-size: 14px;
+	letter-spacing: 0.7px;
+	opacity: 0.7;
 }
-
-
-
-
-
 
 /*END COMPREHENSION SECTION */
 
 .editSpan {
-	color: #377BB5;
+	color: #377bb5;
 	cursor: pointer;
-    margin-top: 14px;
-    display: inline-block;
-    font-size: 12px;
-    font-family: 'proximaNova semibold';    
+	margin-top: 14px;
+	display: inline-block;
+	font-size: 12px;
+	font-family: "proximaNova semibold";
 }
 
 .block {
-	display: block; 
+	display: block;
 	font-size: 12px;
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 }
 
 .noteControlLabel {
@@ -658,21 +627,21 @@ span.missed, span.correct {
 }
 
 .grey {
-    color: #757575;
+	color: #757575;
 	line-height: 1.5em;
 }
 
 .noteTextArea {
-    height: 100px !important;
+	height: 100px !important;
 }
 
 .noteToggleText {
 	margin-right: 13px;
-	cursor: pointer; 
+	cursor: pointer;
 }
 
 .myPopover {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	min-width: 600px;
 	z-index: 1;
 	color: #4a4a4a;
@@ -686,16 +655,14 @@ span.missed, span.correct {
 	margin-top: 100px;
 	margin-bottom: 40px;
 	width: 100%;
-	display/*: flex;
-	flex-flow: column;
-	justify*/-content: center;
+	display: center;
 }
 
 .footerButtonContainer {
 	text-align: center;
 }
 .pricingFooterLabel {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-weight: bold;
 	font-size: 1.6em;
@@ -704,16 +671,16 @@ span.missed, span.correct {
 }
 
 .pricingFooterButton {
-    min-width: 170px;
-    height: 50px;
-    margin: 0 auto;
-    display: block;
-    border-radius: 3px;
-/*    background-color: #2e6da4;
+	min-width: 170px;
+	height: 50px;
+	margin: 0 auto;
+	display: block;
+	border-radius: 3px;
+	/*    background-color: #2e6da4;
     border-color: #275985;
-*/    font-family: 'ProximaNova Semibold';
-    padding: 8px 20px;
-
+*/
+	font-family: "ProximaNova Semibold";
+	padding: 8px 20px;
 }
 
 .multipleFooterButton {
@@ -723,33 +690,34 @@ span.missed, span.correct {
 }
 
 .pricingModalTitle {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 	font-weight: bold;
 	font-size: 1.4em;
 	text-align: center;
 }
 
 .playbookModalHeader {
-	background-color: #F7F7F7;
+	background-color: #f7f7f7;
 	color: #4a4a4a;
 	border-radius: 6px;
-	opacity: .9;
+	opacity: 0.9;
 }
 
 .playbookMoves .detail {
-	font-size: 14px; 
-	font-family: 'ProximaNova';
+	font-size: 14px;
+	font-family: "ProximaNova";
 	line-height: 2.4;
 }
 
-.playbookMoves .detail .poorMetric, .playbookMoves .detail .fairMetric, .playbookMoves .detail .goodMetric{
-    font-style: italic;
-    font-family: 'ProximaNova Semibold';
+.playbookMoves .detail .poorMetric,
+.playbookMoves .detail .fairMetric,
+.playbookMoves .detail .goodMetric {
+	font-style: italic;
+	font-family: "ProximaNova Semibold";
 }
 
-
 .fluencyDetails .detail {
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 }
 
 .readyModalTitle {
@@ -760,17 +728,16 @@ span.missed, span.correct {
 	width: 60px;
 }
 
-
 .readyModalBody {
 	padding: 0px;
 }
 
 .readyCheck {
 	margin-left: 88px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-    font-size: 3em;
-    color: #4cae4c;
+	padding-top: 10px;
+	padding-bottom: 20px;
+	font-size: 3em;
+	color: #4cae4c;
 }
 
 .flag {
@@ -782,19 +749,19 @@ a:hover {
 }
 
 .pricingFormWrapper {
-	padding-top:10px;
+	padding-top: 10px;
 	width: 65%;
 	margin: 0 auto;
 }
 
 .pricingFormField {
 	padding-bottom: 15px;
-	font-family: 'ProximaNova';
+	font-family: "ProximaNova";
 }
 
 .pricingFormFieldLabel {
-	font-family: 'ProximaNova Semibold';
-	font-size: .9em;
+	font-family: "ProximaNova Semibold";
+	font-size: 0.9em;
 	margin-bottom: 5px;
 }
 
@@ -802,7 +769,7 @@ a:hover {
 	width: 100%;
 	height: 35px;
 	background: #fff;
-    border: 1px solid #c5c7cb;
+	border: 1px solid #c5c7cb;
 	border-radius: 4px;
 	padding: 12px;
 	font-size: 0.85em;
@@ -813,16 +780,16 @@ a:hover {
 	height: 40px;
 	margin-top: 10px;
 	margin-bottom: 20px;
-	font-family: 'ProximaNova Semibold';
+	font-family: "ProximaNova Semibold";
 }
 
 .seeYourReportButton {
 	width: 60%;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-    margin-bottom: 25px;
-    margin-top: 10px;
+	text-align: center;
+	margin: 0 auto;
+	display: block;
+	margin-bottom: 25px;
+	margin-top: 10px;
 }
 
 .pdf {
@@ -838,19 +805,18 @@ a:hover {
 	height: 500px;
 	margin: 0 auto;
 	display: block;
-
 }
 
 .miniPlayButton {
-	line-height: .9;
-    position: relative;
-    top: -10px;
-    font-family: 'ProximaNova semibold';
+	line-height: 0.9;
+	position: relative;
+	top: -10px;
+	font-family: "ProximaNova semibold";
 	margin-left: 20px;
-
 }
 
-.noTranscriptionMiniPlayButton, .noTranscriptionAudio {
+.noTranscriptionMiniPlayButton,
+.noTranscriptionAudio {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 20px;
@@ -858,28 +824,25 @@ a:hover {
 
 .miniPlayIcon {
 	margin-left: 5px;
-
 }
 
-
-.miniPlayButton, .compAudioElement {
-margin-top: 10px;
-margin-bottom: 15px;
-display: block;
-margin-left: 20px;
-
+.miniPlayButton,
+.compAudioElement {
+	margin-top: 10px;
+	margin-bottom: 15px;
+	display: block;
+	margin-left: 20px;
 }
 
 .rescore {
-    font-style: italic;
-    font-size: .8em;
-    cursor: pointer;
-    color: #347BB8;
-    transition: all .3s;
+	font-style: italic;
+	font-size: 0.8em;
+	cursor: pointer;
+	color: #347bb8;
+	transition: all 0.3s;
 
-    display: inline-block;
-    width: 125px;
-
+	display: inline-block;
+	width: 125px;
 }
 
 .rescoringLabels {
@@ -888,15 +851,15 @@ margin-left: 20px;
 
 .rescoreIndicator {
 	display: inline-block;
-    font-size: 11px;
-    font-family: 'ProximaNova SemiBold';
-    color: grey;
-    margin-right: 10px;
+	font-size: 11px;
+	font-family: "ProximaNova SemiBold";
+	color: grey;
+	margin-right: 10px;
 }
 
 .rescoringContainer {
-    margin-left: 25px;
-    margin-right: 25px;
+	margin-left: 25px;
+	margin-right: 25px;
 }
 
 .rescoringStudentResponse {
@@ -906,8 +869,8 @@ margin-left: 20px;
 
 .rescoringDivider {
 	margin-bottom: 2.5em;
-    margin-top: 2em;
-    opacity: .66;
+	margin-top: 2em;
+	opacity: 0.66;
 }
 
 .rescoringQuestionBlock {
@@ -921,7 +884,6 @@ margin-left: 20px;
 .saveNewScoreButton {
 	margin: 3em 0px 1em;
 	margin-right: 10px;
-
 }
 
 .saveNewScoreButton:focus {
@@ -929,7 +891,6 @@ margin-left: 20px;
 }
 
 .tophalfRescoring {
-
 }
 
 .rescoringQuestionText {
@@ -937,8 +898,7 @@ margin-left: 20px;
 }
 
 @media (max-width: 1240px) {
-
-	.strategiesTrigger { 
+	.strategiesTrigger {
 		margin-top: 10px;
 	}
 }
