temporarily change spelling; remove illos which are invalid data

--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -1,21 +1,19 @@
-
 .spellingContainer {
-	margin-top: -10%;
+    margin-top: -10%;
 }
 
 .spellingField {
-	width: 235px;
+    width: 235px;
     height: 62px;
     font-size: 48px;
     text-align: center;
     margin-top: 50px;
-    font-family: 'Comic Neue Angular';
-
+    font-family: "Comic Neue Angular";
 }
 
 .spellingImage {
-	width: 235px;
-	height: 235px;
+    width: 235px;
+    height: 235px;
 
     user-drag: none;
     user-select: none;
@@ -26,27 +24,29 @@
 }
 
 i.helper {
-	color: green;
+    color: green;
     font-size: 70px;
-	position: relative;
+    position: relative;
     top: -60px;
     left: -50px;
 }
 
 .volumeHeading {
     color: white;
-    font-family: 'ProximaNova Semibold';
+    font-family: "ProximaNova Semibold";
     position: relative;
     left: -33px;
     bottom: 8px;
     font-size: 16px;
 }
 
-
 .introVolume {
-    display: inline-block;
     position: relative;
-    margin-left: 10px;
+    text-align: center;
+}
+
+.volumeIcon {
+    font-size: 5em;
 }
 
 .clickable {
