--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'ProximaNova', sans-serif;
+	font-family: "ProximaNova", sans-serif;
 }
 
 .fullHeight {
@@ -18,7 +18,7 @@ body {
 	width: 100%;
 	/*height: 100%;*/
 	flex: 1;
-	background-color: #0C1F2C;
+	background-color: #0c1f2c;
 	z-index: 1;
 	justify-content: space-around;
 	align-items: center;
@@ -29,17 +29,15 @@ body {
 	/*width: 200px;
 	height: 70px;*/
 	margin: 30px;
-
 }
 
 .leftDoubleButtonContainer {
 	margin-top: 0px;
-    display: flex;
-    flex-flow: column;
-    height: 65vh;
-    justify-content: space-between;
-    margin-left: 10px;
-
+	display: flex;
+	flex-flow: column;
+	height: 65vh;
+	justify-content: space-between;
+	margin-left: 10px;
 }
 
 .rightButtonContainer {
@@ -47,20 +45,19 @@ body {
 	/*width: 200px;
 	height: 70px;*/
 	margin: 30px;
-
 }
 
-
-.leftButtonContainer, .rightButtonContainer {
+.leftButtonContainer,
+.rightButtonContainer {
 	margin-top: 30%;
 }
 
 .spellingRightButtonContainer {
 	min-width: 200px;
 	margin: 30px;
-	margin-top: 10%;
+	margin-top: -7%;
+	margin-bottom: 0px;
 }
-
 
 .bookpageContainer {
 	width: 31.5%;
@@ -70,22 +67,21 @@ body {
 }
 
 .wideBookpageContainer {
-    width: 53%;
-    height: 75%;
-   	background-color: white;
-   	border-radius: 5px;
+	width: 53%;
+	height: 75%;
+	background-color: white;
+	border-radius: 5px;
 }
 
 .largeWideBookpageContainer {
 	width: 53%;
-    height: 85%;
-   	background-color: white;
-   	border-radius: 5px;
-
+	height: 85%;
+	background-color: white;
+	border-radius: 5px;
 }
 
-
-.routeTransition, .routeTransition > div  {
+.routeTransition,
+.routeTransition > div {
 	width: 100%;
 	height: 100%;
 }
@@ -96,7 +92,6 @@ body {
 }
 
 .doneModalZZZ {
-
 }
 
 .doneModal > div {
@@ -108,7 +103,7 @@ body {
 	left: 0;
 	top: 0;
 	right: 0;
-	bottom: 0;	
+	bottom: 0;
 }
 
 .fullWidthHeight {
@@ -126,30 +121,27 @@ body {
 	opacity: 0.3;
 }
 
-
 .myQuestionMarkIcon {
 	position: relative;
-    top: -56px;
-    left: 30px;
-    font-size: 2.8em;
-	color: #4a4a4a;    
+	top: -56px;
+	left: 30px;
+	font-size: 2.8em;
+	color: #4a4a4a;
 }
 
 .volumeHeading {
 	color: white;
-    font-family: 'ProximaNova Semibold';
-    position: relative;
-    left: -53px;
-    bottom: 8px;
-    font-size: 16px;
+	font-family: "ProximaNova Semibold";
+	position: relative;
+	left: -53px;
+	bottom: 8px;
+	font-size: 16px;
 
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-
-
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 }
 
 .skipPrompt {
@@ -158,16 +150,15 @@ body {
 	color: white;
 	position: relative;
 	top: -40vh;
-	cursor: pointer; 
+	cursor: pointer;
 	opacity: 0.8;
-    transition: all .3s;
-    display: block;
-    width: 185px;
+	transition: all 0.3s;
+	display: block;
+	width: 185px;
 }
 
 .skipPrompt:hover {
 	transform: translateY(-3px);
-    filter: brightness(124%);
-    transition: all .3s;
+	filter: brightness(124%);
+	transition: all 0.3s;
 }
-
