--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -1,3 +1,27 @@
+.largeRectangleButtonContainer {
+	width: 460px;
+	height: 140px;
+	cursor: pointer;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+	color: white;
+	border-radius: 3px;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+
+	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.275);
+	transition: all 0.3s;
+}
 
 .rectangleButtonContainer {
 	cursor: pointer;
@@ -13,25 +37,23 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.275);
-    transition: all .3s;
-                            
+	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.275);
+	transition: all 0.3s;
 }
 
-.rectangleButtonContainer:hover {
+.rectangleButtonContainer:hover,
+.largeRectangleButtonContainer:hover {
 	transform: translateY(-3px);
-    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
-    filter: brightness(120%);
-    transition: all .3s;
-
-
+	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+	filter: brightness(120%);
+	transition: all 0.3s;
 }
 
 .rectangleButtonContainer:active {
@@ -53,14 +75,37 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
 
+.largeDisabledButtonContainer {
+	cursor: default;
+	width: 460px;
+	height: 140px;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+	color: white;
+	border-radius: 5px;
+
+	opacity: 0.4;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 .partiallyDisabledButtonContainer {
 	width: 100%;
@@ -77,23 +122,28 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
 
 .navRectangleButtonTitle {
-  margin-top: 13px;
+	margin-top: 13px;
 }
-
 
 .rectangleButtonTitle {
 	font-size: 1.6em;
-	font-family: 'Proximanova';
-  font-weight: bold;
+	font-family: "Proximanova";
+	font-weight: bold;
+}
+
+.largeRectangleButtonTitle {
+	font-size: 3.2em;
+	font-family: "Proximanova";
+	font-weight: bold;
 }
 
 .rectangleButtonSubtitle {
@@ -103,16 +153,15 @@
 
 .singleTitle {
 	font-weight: 100;
-	font-family: 'Proximanova Semibold';
+	font-family: "Proximanova Semibold";
 }
 
 @keyframes pulse-right {
 	from {
-		transform: translateX(0.1em) 
-		scale(1.1)
+		transform: translateX(0.1em) scale(1.1);
 	}
 	to {
-		transform: translateX(-0.1em)
+		transform: translateX(-0.1em);
 	}
 }
 
@@ -121,14 +170,3 @@
 	left: -15px;
 	animation: pulse-right 800ms infinite alternate;
 }
-
-
-
-
-
-
-
-
-
-
-
