--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -1,4 +1,3 @@
-
 .arrowButtonContainer {
 	cursor: pointer;
 	width: 100%;
@@ -16,24 +15,21 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 
-    transition: all .3s;
-
-
+	transition: all 0.3s;
 }
 
 .arrowButtonContainer:hover {
 	transform: translateY(-3px);
-    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
-    filter: brightness(120%);
-    transition: all .3s;
-
+	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+	filter: brightness(120%);
+	transition: all 0.3s;
 }
 
 .arrowButtonContainer:active {
@@ -57,15 +53,13 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-
-
 
 .partiallyDisabledButtonContainer {
 	width: 100%;
@@ -84,17 +78,38 @@
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
 
+.largePartiallyDisabledButtonContainer {
+	width: 460px;
+	height: 140px;
+	display: flex;
+	flex-flow: row;
+	justify-content: flex-end;
+	align-items: center;
+	z-index: 100;
+	color: white;
+	border-radius: 5px;
+	background-image: url(/images/dashboard/blue-arrow.svg);
+	background-size: 100% 100%;
 
+	opacity: 0.8;
 
-
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 .arrowButtonTextContainer {
 	float: left;
@@ -113,16 +128,15 @@
 
 .arrowButtonSubtitle {
 	margin-top: 3px;
-	font-size: 1.0em;
+	font-size: 1em;
 }
 
 @keyframes pulse-right {
 	from {
-		transform: translateX(0.1em) 
-		scale(1.1)
+		transform: translateX(0.1em) scale(1.1);
 	}
 	to {
-		transform: translateX(-0.1em)
+		transform: translateX(-0.1em);
 	}
 }
 
@@ -131,14 +145,3 @@
 	left: -15px;
 	animation: pulse-right 800ms infinite alternate;
 }
-
-
-
-
-
-
-
-
-
-
-
