--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -123,6 +123,30 @@
                                   supported by Chrome and Opera */
 }
 
+.largePartiallyDisabledButtonContainer {
+	width: 460px;
+	height: 140px;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+	color: white;
+	border-radius: 5px;
+
+	opacity: 0.8;
+	cursor: default;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .partiallyDisabledButtonContainer {
 	width: 100%;
 	height: 100%;
