spinner overlay is good

--- a/client/src/StudentDashboard/overlays/SpinnerOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/SpinnerOverlay/styles.css
@@ -1,19 +1,41 @@
-.spinnerWrapper {
+.countdownWrapper {
 	position: absolute;
 	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.3);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 4444;
+	z-index: 3333;
 }
 
-.spinner {
-	width: 60px;
-	height: 60px;
-	padding: 5px;
-	border-radius: 5px;
-	background-color: lightgray;
+.countdownContentCountainer {
+	width: 200px;
+	height: 200px;
+	background-color: white;
+	border-radius: 6px;
+	color: #9d2c28;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
+	box-shadow: 0px 0px 10px 2px #5b5b5b;
+	position: relative;
+	top: 10px;
+}
+
+.countdownTitle {
+	margin-top: 20px;
+	font-size: 1.4em;
+	font-family: Proximanova;
+	font-weight: bold;
+}
+
+.countdownNumber {
+	font-size: 6.5em;
+	margin-bottom: 20px;
+	font-weight: bold;
 }
