--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -60,7 +60,7 @@ body {
 .spellingRightButtonContainer {
 	min-width: 200px;
 	margin: 30px;
-	margin-top: -7%;
+	margin-top: -4%;
 	margin-bottom: 0px;
 }
 
@@ -85,6 +85,15 @@ body {
 	border-radius: 5px;
 	text-align: center;
 	margin: 0 auto;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .disabledLargeWideBookpageContainer {
@@ -100,6 +109,15 @@ body {
 	z-index: -1;
 
 	opacity: 0.5;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .buttonContainer {
