first step of making the book cover vertically aligned

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -83,7 +83,7 @@ body {
 	opacity: 0.5;
 	position: relative;
 	z-index: -1;
-	top: -40vh;
+	top: 7vh;
 }
 
 .wideBookpageContainer {
@@ -127,7 +127,7 @@ body {
 	margin: 0 auto;
 
 	position: relative;
-	top: -40vh;
+	top: 7vh;
 	z-index: -1;
 
 	opacity: 0.5;
@@ -143,8 +143,12 @@ body {
 }
 
 .buttonContainer {
-	display: block;
-	margin-top: 36%;
+}
+
+.buttonPlacement {
+	position: relative;
+	z-index: 999;
+	top: -250px;
 }
 
 .routeTransition,
