added hear again UI and fixed stop recording bug

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -127,7 +127,7 @@ body {
 	margin: 0 auto;
 
 	position: relative;
-	top: 7vh;
+	top: 8.2vh;
 	z-index: -1;
 
 	opacity: 0.5;
@@ -215,11 +215,42 @@ body {
 	user-select: none;
 }
 
+.volumeHeadingHearAgain {
+	color: white;
+	font-family: "ProximaNova Semibold";
+	position: relative;
+	left: -15px;
+	bottom: -9px;
+	font-size: 20px;
+
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
 .volumeContainer {
 	position: relative;
 	-ms-transform: rotate(-4deg);
 	-webkit-transform: rotate(-4deg);
 	transform: rotate(-4deg);
+}
+
+.clickable {
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+.clickable:hover {
+	transform: translateY(-3px);
+	filter: brightness(120%);
+	transition: all 0.3s;
+}
+
+.clickable:active {
+	opacity: 0.8;
+	transform: all 0.3s;
 }
 
 .skipPrompt {
