--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -75,6 +75,12 @@
 
 .rectangleButtonContainer:active {
 	opacity: 0.8;
+	transition: all 0.3s;
+}
+
+.largeRectangleButtonContainer:active {
+	opacity: 0.7;
+	transition: all 0.3s;
 }
 
 .disabledButtonContainer {
